fix typo, test diffing

--- a/NOTEBOOK-FORMAT-TEST.ipynb
+++ b/NOTEBOOK-FORMAT-TEST.ipynb
@@ -29,7 +29,7 @@
     }
    },
    "source": [
-    "Does this render nicely in GitHub? Can folks review the code line-by-lin, or is it a json blob?"
+    "Does this render nicely in GitHub? Can folks review the code line-by-line, or is it a json blob?"
    ]
   },
   {
