--- a/notebooks/pdp/automated-pipeline/data_processing_pipeline_task.ipynb
+++ b/notebooks/pdp/automated-pipeline/data_processing_pipeline_task.ipynb
@@ -26,9 +26,8 @@
     "\"\"\"\n",
     "\n",
     "import logging\n",
-    "import pandas as pd\n",
-    "import mlflow\n",
     "\n",
+    "import mlflow\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
     "\n",
@@ -49,7 +48,7 @@
     "    spark_session = None\n",
     "\n",
     "# Databricks workspace identifier\n",
-    "DB_workspace = dbutils.widgets.get(\"DB_workspace\") \n",
+    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
     "\n",
     "# Input parameters from Databricks widgets\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
@@ -57,8 +56,8 @@
     "\n",
     "# Delta Lake table details (read from job task values set by data ingestion task)\n",
     "catalog = DB_workspace\n",
-    "read_schema = f'{institution_id}_bronze' \n",
-    "write_schema = f'{institution_id}_silver' \n",
+    "read_schema = f\"{institution_id}_bronze\"\n",
+    "write_schema = f\"{institution_id}_silver\"\n",
     "\n",
     "# Read DataFrames from Delta Lake tables (if Spark session is available)\n",
     "if spark_session:\n",
@@ -103,7 +102,7 @@
     "min_num_credits_checkin = 1.0\n",
     "min_num_credits_target = 1.0\n",
     "student_criteria = {\n",
-    "    \"enrollment_type\": ['FIRST-TIME', 'RE-ADMIT', 'TRANSFER-IN'],\n",
+    "    \"enrollment_type\": [\"FIRST-TIME\", \"RE-ADMIT\", \"TRANSFER-IN\"],\n",
     "    # \"enrollment_intensity_first_term\": [\"FULL-TIME\", \"PART-TIME\"], # Example, but commented out.\n",
     "    # \"credential_type_sought_year_1\": \"Associate's Degree\",  # Example, but commented out.\n",
     "}\n",
@@ -137,7 +136,9 @@
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
     "    write_table_path = f\"{catalog}.{write_schema}.{sst_job_id}_processed_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(df_processed, write_table_path, spark_session=spark_session)\n",
+    "    pdp.dataio.write_data_to_delta_table(\n",
+    "        df_processed, write_table_path, spark_session=spark_session\n",
+    "    )\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
     "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")"
