--- a/notebooks/pdp/automated-pipeline/model_inference_pipeline_task.ipynb
+++ b/notebooks/pdp/automated-pipeline/model_inference_pipeline_task.ipynb
@@ -25,9 +25,8 @@
     "\"\"\"\n",
     "\n",
     "import logging\n",
-    "import pandas as pd\n",
-    "import mlflow\n",
     "\n",
+    "import mlflow\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
     "\n",
@@ -48,7 +47,7 @@
     "    spark_session = None\n",
     "\n",
     "# --- Input Parameters (from Databricks widgets) ---\n",
-    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")   # Databricks workspace identifier.\n",
+    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")  # Databricks workspace identifier.\n",
     "\n",
     "\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
@@ -60,11 +59,12 @@
     "# --- Delta Lake Configuration ---\n",
     "catalog = DB_workspace\n",
     "# write_schema = dbutils.jobs.taskValues.get(taskKey=\"data_ingestion\", key=\"write_schema\")  # From data ingestion task.\n",
-    "read_schema = f'{institution_id}_silver' \n",
-    "write_schema = f'{institution_id}_silver' \n",
-    "model_schema = f'{institution_id}_bronze'\n",
+    "read_schema = f\"{institution_id}_silver\"\n",
+    "write_schema = f\"{institution_id}_silver\"\n",
+    "model_schema = f\"{institution_id}_bronze\"\n",
     "\n",
     "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"  # Construct model URI.\n",
+    "\n",
     "\n",
     "# --- Model Loading ---\n",
     "def mlflow_load_model(model_uri: str, model_type: str):\n",
@@ -75,7 +75,9 @@
     "        \"xgboost\": mlflow.xgboost.load_model,\n",
     "        \"lightgbm\": mlflow.lightgbm.load_model,\n",
     "        \"pyfunc\": mlflow.pyfunc.load_model,  # Default if type is not recognized\n",
-    "    }.get(model_type, mlflow.pyfunc.load_model)  # Default to pyfunc if model_type not found.\n",
+    "    }.get(\n",
+    "        model_type, mlflow.pyfunc.load_model\n",
+    "    )  # Default to pyfunc if model_type not found.\n",
     "\n",
     "    model = load_model_func(model_uri)\n",
     "    logging.info(f\"MLflow '{model_type}' model loaded from '{model_uri}'\")\n",
@@ -89,45 +91,58 @@
     "if spark_session:\n",
     "    # Load the dataset prepared for inference.\n",
     "    df_serving_dataset = pdp.dataio.read_data_from_delta_table(\n",
-    "        f\"{catalog}.{read_schema}.{sst_job_id}_processed_dataset\", spark_session=spark_session\n",
+    "        f\"{catalog}.{read_schema}.{sst_job_id}_processed_dataset\",\n",
+    "        spark_session=spark_session,\n",
     "    )\n",
     "\n",
     "    # Ensure the input data matches the model's expected input schema.\n",
     "    try:\n",
     "        model_columns = loaded_model.named_steps[\"column_selector\"].get_params()[\"cols\"]\n",
-    "    except AttributeError: # if the model doesn't have a column_selector, it is likely a pyfunc model\n",
+    "    except (\n",
+    "        AttributeError\n",
+    "    ):  # if the model doesn't have a column_selector, it is likely a pyfunc model\n",
     "        model_columns = loaded_model.metadata.get_input_schema().input_names()\n",
     "    df_serving_dataset = df_serving_dataset[model_columns]\n",
     "\n",
     "    # Write the inference-ready dataset back to Delta Lake.\n",
     "    inference_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(df_serving_dataset, inference_dataset_path, spark_session=spark_session)\n",
+    "    pdp.dataio.write_data_to_delta_table(\n",
+    "        df_serving_dataset, inference_dataset_path, spark_session=spark_session\n",
+    "    )\n",
     "\n",
     "    # Reload the inference dataset (important for schema consistency with the model input).\n",
     "    df_serving_dataset = pdp.dataio.read_data_from_delta_table(\n",
     "        inference_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "\n",
-    "\n",
     "    # Perform inference.\n",
-    "    df_serving_dataset['predicted_label'] = loaded_model.predict(df_serving_dataset)\n",
+    "    df_serving_dataset[\"predicted_label\"] = loaded_model.predict(df_serving_dataset)\n",
     "\n",
     "    try:\n",
-    "        df_serving_dataset['predicted_prob'] = loaded_model.predict_proba(df_serving_dataset)[:, 1]\n",
-    "    except AttributeError: # if the model doesn't have predict_proba, it is likely a pyfunc model\n",
-    "        logging.warning(\"Model does not have predict_proba method. Skipping probability prediction.\")\n",
+    "        df_serving_dataset[\"predicted_prob\"] = loaded_model.predict_proba(\n",
+    "            df_serving_dataset\n",
+    "        )[:, 1]\n",
+    "    except (\n",
+    "        AttributeError\n",
+    "    ):  # if the model doesn't have predict_proba, it is likely a pyfunc model\n",
+    "        logging.warning(\n",
+    "            \"Model does not have predict_proba method. Skipping probability prediction.\"\n",
+    "        )\n",
     "        pass\n",
     "\n",
     "    # Write the dataset with predictions to Delta Lake.\n",
     "    predicted_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(df_serving_dataset, predicted_dataset_path, spark_session=spark_session)\n",
+    "    pdp.dataio.write_data_to_delta_table(\n",
+    "        df_serving_dataset, predicted_dataset_path, spark_session=spark_session\n",
+    "    )\n",
     "    logging.info(f\"Predictions saved to: {predicted_dataset_path}\")\n",
-    "\n",
     "\n",
     "    # TODO Shap values\n",
     "\n",
     "else:\n",
-    "    logging.warning(\"Spark session not initialized. Skipping data processing and inference.\")"
+    "    logging.warning(\n",
+    "        \"Spark session not initialized. Skipping data processing and inference.\"\n",
+    "    )"
    ]
   },
   {
@@ -149,7 +164,7 @@
    "outputs": [],
    "source": [
     "# TODO there are model dependencies that need to be installed at runtime\n",
-    "# This was the error receieved (although it still worked) \n",
+    "# This was the error receieved (although it still worked)\n",
     "\"\"\"\n",
     "- mlflow (current: 2.20.0, required: mlflow==2.19.0)\n",
     "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n",
