--- a/notebooks/pdp/automated-pipeline/data_ingestion_pipeline_task.ipynb
+++ b/notebooks/pdp/automated-pipeline/data_ingestion_pipeline_task.ipynb
@@ -33,12 +33,9 @@
     "\n",
     "import logging\n",
     "import os\n",
-    "import shutil  \n",
-    "import pandas as pd\n",
     "\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
-    "\n",
     "from google.cloud import storage\n",
     "\n",
     "from student_success_tool.analysis import pdp\n",
@@ -55,7 +52,7 @@
     "    spark_session = None\n",
     "\n",
     "# Input parameters (provided via Databricks widgets or job task values)\n",
-    "DB_workspace = dbutils.widgets.get(\"DB_workspace\") # Databricks workspace identifier\n",
+    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")  # Databricks workspace identifier\n",
     "\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
     "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
@@ -63,15 +60,19 @@
     "\n",
     "# Handle synthetic data generation case\n",
     "if dbutils.widgets.get(\"synthetic_needed\") == \"True\":\n",
-    "    course_file_name = dbutils.jobs.taskValues.get(taskKey=\"generate_synthetic_data\", key=\"course_file_name\")\n",
-    "    cohort_file_name = dbutils.jobs.taskValues.get(taskKey=\"generate_synthetic_data\", key=\"cohort_file_name\")\n",
+    "    course_file_name = dbutils.jobs.taskValues.get(\n",
+    "        taskKey=\"generate_synthetic_data\", key=\"course_file_name\"\n",
+    "    )\n",
+    "    cohort_file_name = dbutils.jobs.taskValues.get(\n",
+    "        taskKey=\"generate_synthetic_data\", key=\"cohort_file_name\"\n",
+    "    )\n",
     "else:\n",
     "    course_file_name = dbutils.widgets.get(\"course_file_name\")\n",
     "    cohort_file_name = dbutils.widgets.get(\"cohort_file_name\")\n",
     "\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
-    "internal_pipeline_path = f'/Volumes/{DB_workspace}/{institution_id}_{medallion_level}/pdp_pipeline_internal/{sst_job_id}/raw_files/'\n",
+    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_id}_{medallion_level}/pdp_pipeline_internal/{sst_job_id}/raw_files/\"\n",
     "\n",
     "\n",
     "# Create internal pipeline directory\n",
@@ -110,9 +111,10 @@
     "    fpath_cohort, schema=pdp.schemas.RawPDPCohortDataSchema\n",
     ")\n",
     "\n",
+    "\n",
     "# Define Delta Lake table details\n",
     "catalog = DB_workspace\n",
-    "write_schema = f'{institution_id}_bronze'  # TODO: Confirm medallion level usage\n",
+    "write_schema = f\"{institution_id}_bronze\"  # TODO: Confirm medallion level usage\n",
     "\n",
     "\n",
     "# Write DataFrames to Delta Lake tables (only if Spark session is available)\n",
@@ -146,7 +148,9 @@
     "    )\n",
     "    print(f\"Cohort DataFrame shape from catalog: {df_cohort_from_catalog.shape}\")\n",
     "else:\n",
-    "    logging.warning(\"Spark session not initialized. Skipping Delta Lake write and verification.\")"
+    "    logging.warning(\n",
+    "        \"Spark session not initialized. Skipping Delta Lake write and verification.\"\n",
+    "    )"
    ]
   }
  ],
@@ -165,8 +169,22 @@
    "notebookName": "data_ingestion_pipeline_task",
    "widgets": {}
   },
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
