Changing path to pipelines directory

--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -30,6 +30,7 @@
     "import mlflow\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
+    "import pandas as pd\n",
     "\n",
     "from student_success_tool.analysis import pdp\n",
     "from student_success_tool import configs\n",
@@ -119,25 +120,21 @@
     "    (\"PART-TIME\", 1.0, \"year\"),\n",
     "]\n",
     "\n",
-    "df_processed = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_inference_dataset(\n",
+    "student_id_col = \"student_guid\"\n",
+    "eligible_students = pdp.targets.shared.select_students_by_criteria(\n",
     "    df_student_terms,\n",
-    "    min_num_credits_checkin=min_num_credits_checkin,\n",
-    "    min_num_credits_target=min_num_credits_target,\n",
-    "    student_criteria=student_criteria,\n",
-    "    intensity_time_limits=intensity_time_limits,\n",
+    "    student_id_cols=student_id_col,\n",
+    "    **student_criteria,\n",
     ")\n",
+    "max_term_rank = df_student_terms[\"term_rank\"].max()\n",
     "\n",
-    "\n",
-    "# # Temporary workaround: Create and drop the 'target' label due to library issue.\n",
-    "# # This should be replaced with the updated library function once available.\n",
-    "# df_processed = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_labeled_dataset(\n",
-    "#     df_student_terms,\n",
-    "#     min_num_credits_checkin=min_num_credits_checkin,\n",
-    "#     min_num_credits_target=min_num_credits_target,\n",
-    "#     student_criteria=student_criteria,\n",
-    "#     intensity_time_limits=intensity_time_limits,\n",
-    "# )\n",
-    "# df_processed.drop(\"target\", axis=1, inplace=True)  # Drop the temporary target column.\n",
+    "df_processed = pd.merge(\n",
+    "    df_student_terms.loc[df_student_terms[\"term_rank\"].eq(max_term_rank), :],\n",
+    "    eligible_students,\n",
+    "    on=student_id_col,\n",
+    "    how=\"inner\",\n",
+    ")\n",
+    "df_processed = pdp.dataops.clean_up_labeled_dataset_cols_and_vals(df_processed)\n",
     "\n",
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
@@ -147,7 +144,9 @@
     "    )\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
-    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")"
+    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")\n",
+    "\n",
+    "dbutils.jobs.taskValues.set(key=\"processed_dataset_path\", value=write_table_path)"
    ]
   }
  ],
