--- a/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
@@ -56,7 +56,6 @@
     "\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
     "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
-    "medallion_level = \"bronze\"\n",
     "\n",
     "# Handle synthetic data generation case\n",
     "if dbutils.widgets.get(\"synthetic_needed\") == \"True\":\n",
@@ -72,7 +71,7 @@
     "\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
-    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_id}_{medallion_level}/pdp_pipeline_internal/{sst_job_id}/raw_files/\"\n",
+    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/{sst_job_id}/raw_files/\"\n",
     "\n",
     "\n",
     "# Create internal pipeline directory\n",
@@ -114,7 +113,7 @@
     "\n",
     "# Define Delta Lake table details\n",
     "catalog = DB_workspace\n",
-    "write_schema = f\"{institution_id}_bronze\"  # TODO: Confirm medallion level usage\n",
+    "write_schema = f\"{institution_id}_bronze\"\n",
     "\n",
     "\n",
     "# Write DataFrames to Delta Lake tables (only if Spark session is available)\n",
