Updating to new package structure
Updating to new package structured committed https://github.com/datakind/student-success-tool/commit/d5ad1bf6faa073e2976944f3150dcb97f0f81a93

--- a/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
@@ -38,7 +38,8 @@
     "from databricks.sdk.runtime import dbutils\n",
     "from google.cloud import storage\n",
     "\n",
-    "from student_success_tool.analysis import pdp\n",
+    "import student_success_tool.dataio as dataio\n",
+    "from student_success_tool.schemas import pdp as schemas\n",
     "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
@@ -103,11 +104,11 @@
     "fpath_cohort = os.path.join(path_volume, cohort_file_name)\n",
     "\n",
     "# Read data from CSV files into Pandas DataFrames and validate schema\n",
-    "df_course = pdp.dataio.read_raw_pdp_course_data_from_file(\n",
-    "    fpath_course, schema=pdp.schemas.RawPDPCourseDataSchema, dttm_format=None\n",
+    "df_course = dataio.pdp.read_raw_course_data(\n",
+    "    file_path=fpath_course, schema=schemas.RawPDPCourseDataSchema, dttm_format=\"%Y-%m-%d\"\n",
     ")\n",
-    "df_cohort = pdp.dataio.read_raw_pdp_cohort_data_from_file(\n",
-    "    fpath_cohort, schema=pdp.schemas.RawPDPCohortDataSchema\n",
+    "df_cohort = dataio.pdp.read_raw_cohort_data(\n",
+    "    file_path=fpath_cohort, schema=schemas.RawPDPCohortDataSchema\n",
     ")\n",
     "\n",
     "\n",
@@ -118,29 +119,29 @@
     "\n",
     "# Write DataFrames to Delta Lake tables (only if Spark session is available)\n",
     "if spark_session:\n",
-    "    pdp.dataio.write_data_to_delta_table(\n",
+    "    dataio.to_delta_table(\n",
     "        df_course,\n",
     "        f\"{catalog}.{write_schema}.{sst_job_id}_course_dataset_validated\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
     "\n",
-    "    pdp.dataio.write_data_to_delta_table(\n",
+    "    dataio.to_delta_table(\n",
     "        df_cohort,\n",
     "        f\"{catalog}.{write_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
     "\n",
     "    # Verify Delta Lake write by reading data back\n",
-    "    df_course_from_catalog = pdp.schemas.RawPDPCourseDataSchema(\n",
-    "        pdp.dataio.read_data_from_delta_table(\n",
+    "    df_course_from_catalog = schemas.RawPDPCourseDataSchema(\n",
+    "        dataio.from_delta_table(\n",
     "            f\"{catalog}.{write_schema}.{sst_job_id}_course_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
     "    print(f\"Course DataFrame shape from catalog: {df_course_from_catalog.shape}\")\n",
     "\n",
-    "    df_cohort_from_catalog = pdp.schemas.RawPDPCohortDataSchema(\n",
-    "        pdp.dataio.read_data_from_delta_table(\n",
+    "    df_cohort_from_catalog = schemas.RawPDPCohortDataSchema(\n",
+    "        dataio.from_delta_table(\n",
     "            f\"{catalog}.{write_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
