--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -32,8 +32,11 @@
     "from databricks.sdk.runtime import dbutils\n",
     "import pandas as pd\n",
     "\n",
-    "from student_success_tool.analysis import pdp\n",
-    "from student_success_tool import configs\n",
+    "import student_success_tool.dataio as dataio\n",
+    "import student_success_tool.targets.pdp as targets\n",
+    "from student_success_tool.schemas import pdp as schemas\n",
+    "import student_success_tool.preprocessing.pdp as preprocessing\n",
+    "\n",
     "\n",
     "# Disable mlflow autologging (due to Databricks issues during feature selection)\n",
     "mlflow.autolog(disable=True)\n",
@@ -63,15 +66,15 @@
     "\n",
     "# Read DataFrames from Delta Lake tables (if Spark session is available)\n",
     "if spark_session:\n",
-    "    df_course = pdp.schemas.RawPDPCourseDataSchema(\n",
-    "        pdp.dataio.read_data_from_delta_table(\n",
+    "    df_course = schemas.RawPDPCourseDataSchema(\n",
+    "        dataio.from_delta_table(\n",
     "            f\"{catalog}.{read_schema}.{sst_job_id}_course_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
     "\n",
-    "    df_cohort = pdp.schemas.RawPDPCohortDataSchema(\n",
-    "        pdp.dataio.read_data_from_delta_table(\n",
+    "    df_cohort = schemas.RawPDPCohortDataSchema(\n",
+    "        dataio.from_delta_table(\n",
     "            f\"{catalog}.{read_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
@@ -82,9 +85,9 @@
     "\n",
     "\n",
     "# Reading the parameters from the institution's configuration file\n",
-    "cfg = configs.load_config(\n",
+    "cfg = dataio.read_config(\n",
     "    f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\",\n",
-    "    configs.PDPProjectConfigV2,\n",
+    "    schema = schemas.PDPProjectConfigV2,\n",
     ")\n",
     "\n",
     "# Read preprocessing features\n",
@@ -99,7 +102,7 @@
     "min_num_credits_target = cfg.preprocessing.target.params[\"min_num_credits_target\"]\n",
     "\n",
     "# Create student-term dataset\n",
-    "df_student_terms = pdp.dataops.make_student_term_dataset(\n",
+    "df_student_terms = preprocessing.dataops.make_student_term_dataset(\n",
     "    df_cohort,\n",
     "    df_course,\n",
     "    min_passing_grade=min_passing_grade,\n",
@@ -121,7 +124,7 @@
     "]\n",
     "\n",
     "student_id_col = \"student_guid\"\n",
-    "eligible_students = pdp.targets.shared.select_students_by_criteria(\n",
+    "eligible_students = targets.shared.select_students_by_criteria(\n",
     "    df_student_terms,\n",
     "    student_id_cols=student_id_col,\n",
     "    **student_criteria,\n",
@@ -134,12 +137,12 @@
     "    on=student_id_col,\n",
     "    how=\"inner\",\n",
     ")\n",
-    "df_processed = pdp.dataops.clean_up_labeled_dataset_cols_and_vals(df_processed)\n",
+    "df_processed = preprocessing.dataops.clean_up_labeled_dataset_cols_and_vals(df_processed)\n",
     "\n",
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
     "    write_table_path = f\"{catalog}.{write_schema}.{sst_job_id}_processed_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(\n",
+    "    dataio.to_delta_table(\n",
     "        df_processed, write_table_path, spark_session=spark_session\n",
     "    )\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
