--- a/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
@@ -30,7 +30,8 @@
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
     "\n",
-    "from student_success_tool.analysis import pdp\n",
+    "import student_success_tool.dataio as dataio\n",
+    "\n",
     "\n",
     "# Disable mlflow autologging (prevents conflicts in Databricks environments).\n",
     "mlflow.autolog(disable=True)\n",
@@ -90,7 +91,7 @@
     "# --- Data Loading, Inference, and Saving ---\n",
     "if spark_session:\n",
     "    # Load the dataset prepared for inference.\n",
-    "    df_serving_dataset = pdp.dataio.read_data_from_delta_table(\n",
+    "    df_serving_dataset = dataio.from_delta_table(\n",
     "        f\"{catalog}.{read_schema}.{sst_job_id}_processed_dataset\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
@@ -106,12 +107,12 @@
     "\n",
     "    # Write the inference-ready dataset back to Delta Lake.\n",
     "    inference_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(\n",
+    "    dataio.to_delta_table(\n",
     "        df_serving_dataset, inference_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "\n",
     "    # Reload the inference dataset (important for schema consistency with the model input).\n",
-    "    df_serving_dataset = pdp.dataio.read_data_from_delta_table(\n",
+    "    df_serving_dataset = dataio.from_delta_table(\n",
     "        inference_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "\n",
@@ -132,7 +133,7 @@
     "\n",
     "    # Write the dataset with predictions to Delta Lake.\n",
     "    predicted_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
-    "    pdp.dataio.write_data_to_delta_table(\n",
+    "    dataio.to_delta_table(\n",
     "        df_serving_dataset, predicted_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "    logging.info(f\"Predictions saved to: {predicted_dataset_path}\")\n",
