Adding shap values and reading from toml file

--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -32,9 +32,10 @@
     "from databricks.sdk.runtime import dbutils\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "import student_success_tool.dataio as dataio\n",
     "import student_success_tool.targets.pdp as targets\n",
-    "from student_success_tool.schemas import pdp as schemas\n",
+    "import student_success_tool.schemas.pdp as schemas\n",
     "import student_success_tool.preprocessing.pdp as preprocessing\n",
     "\n",
     "\n",
@@ -54,6 +55,7 @@
     "\n",
     "# Databricks workspace identifier\n",
     "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
+    "model_name = dbutils.widgets.get(\"model_name\")\n",
     "\n",
     "# Input parameters from Databricks widgets\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
@@ -86,8 +88,8 @@
     "\n",
     "# Reading the parameters from the institution's configuration file\n",
     "cfg = dataio.read_config(\n",
-    "    f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\",\n",
-    "    schema = schemas.PDPProjectConfigV2,\n",
+    "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
+    "    schema = schemas.PDPProjectConfig\n",
     ")\n",
     "\n",
     "# Read preprocessing features\n",
@@ -111,7 +113,6 @@
     "    key_course_subject_areas=key_course_subject_areas,\n",
     "    key_course_ids=key_course_ids,\n",
     ")\n",
-    "\n",
     "\n",
     "student_criteria = {\n",
     "    \"enrollment_type\": [\"FIRST-TIME\", \"RE-ADMIT\", \"TRANSFER-IN\"],\n",
