--- a/tests/institution_onboarding/institution_onboarding.ipynb
+++ b/tests/institution_onboarding/institution_onboarding.ipynb
@@ -94,6 +94,12 @@
     "                                  volume_type=catalog.VolumeType.MANAGED)\n",
     "    \n",
     "\n",
+    "    # Create a managed volume in the gold schema for the configuration files (.toml files)\n",
+    "    created_volume = w.volumes.create(catalog_name=catalog_name,\n",
+    "                                  schema_name=f\"{institution_id}_gold\",\n",
+    "                                  name=f'gold_volume',\n",
+    "                                  volume_type=catalog.VolumeType.MANAGED)\n",
+    "\n",
     "\n",
     "    # Copy an existing model to the new institution's bronze schema.  This is a placeholder.\n",
     "    # In a real scenario, models would likely be trained specifically for the institution.\n",
@@ -105,16 +111,17 @@
     "\n",
     "    # Creating an institution configuration file copying from a template. This is a placeholder.\n",
     "    # In a real scenario, toml file is specifically built for the institution.\n",
-    "    toml_template_path ='/Workspace/Users/pedro.melendez@datakind.org/pedro-clone-student-success-tool-develop/tests/pedro_test_folder/template_toml_file.toml'\n",
+    "    toml_template_path ='/Workspace/Users/pedro.melendez@datakind.org/repo-student-success-tool-develop/tests/institution_onboarding/template_enrollment_model_toml_file.toml'\n",
     "    with open(toml_template_path, 'r') as f:\n",
     "        toml_template = toml.load(f)\n",
     "\n",
     "    toml_template['institution_id'], toml_template['institution_name'] = institution_id, institution_id\n",
     "\n",
     "    # Create directory on the volume\n",
-    "    os.makedirs(f\"/Volumes/{catalog_name}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/\", exist_ok=True)\n",
+    "    config_file_path = f\"/Volumes/{catalog_name}/{institution_id}_gold/gold_volume/configuration_files/\"\n",
+    "    os.makedirs(config_file_path, exist_ok=True)\n",
     "\n",
-    "    with open(f\"/Volumes/{catalog_name}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\", 'w') as f:\n",
+    "    with open(f\"{config_file_path}/{institution_id}_{model_name}_configuration_file.toml\", 'w') as f:\n",
     "        toml.dump(toml_template, f)\n",
     "\n",
     "    \n",
@@ -137,6 +144,13 @@
     "    try:\n",
     "        # Delete the managed volume.\n",
     "        w.volumes.delete(name=f'{catalog_name}.{institution_id}_bronze.pdp_pipeline_internal')\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error deleting volume: {e}\")\n",
+    "\n",
+    "\n",
+    "    try:\n",
+    "        # Delete the managed volume.\n",
+    "        w.volumes.delete(name=f'{catalog_name}.{institution_id}_gold.gold_volume')\n",
     "    except Exception as e:\n",
     "        print(f\"Error deleting volume: {e}\")\n",
     "\n",
@@ -178,7 +192,7 @@
    "outputs": [],
    "source": [
     "# Example usage (comment out to test)\n",
-    "institution_id  = \"standard_pdp_institution_15\" # Example institution ID.  Should be parameterized in real use cases.\n",
+    "institution_id  = \"pdp_institution_23\" # Example institution ID.  Should be parameterized in real use cases.\n",
     "print(institution_id)"
    ]
   },
@@ -224,11 +238,11 @@
    "source": [
     "# Running an inference job with the new institution\n",
     "\n",
-    "job_name = \"PDP_inference_pipeline_on_personal_cluster\"\n",
+    "job_name = \"pdp_inference_pipeline_on_personal_cluster_pedro\"\n",
     "# job_name = \"PDP_inference_pipeline\"\n",
     "job_id = next(w.jobs.list(name=job_name)).job_id\n",
     "\n",
-    "run_job = w.jobs.run_now(job_id, job_parameters={'synthetic_needed': \"True\", 'institution_id': institution_id, 'sst_job_id': f\"{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\"})\n",
+    "run_job = w.jobs.run_now(job_id, job_parameters={'synthetic_needed': \"True\", 'institution_id': institution_id, 'sst_job_id': f\"first_inference_job_{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\"})\n",
     "print(run_job.response)\n"
    ]
   },
