--- a/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
@@ -5,9 +5,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "839ac7da-09c0-4d9c-ab75-ccb0ed0cb21d",
+     "nuid": "6107cdd3-68e1-4242-8831-d3c06f40338b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -18,133 +21,301 @@
     "\"\"\"\n",
     "This script performs model inference for the Student Success Tool (SST) pipeline.\n",
     "\n",
-    "It loads a pre-trained ML model from MLflow Model Registry, reads a processed \n",
-    "dataset from Delta Lake, performs inference, and writes the predictions back to \n",
-    "Delta Lake.  It's designed to run within a Databricks environment.\n",
+    "It loads a pre-trained ML model from MLflow Model Registry, \n",
+    "reads a processed dataset from Delta Lake, performs inference, calculates SHAP values, \n",
+    "and writes the predictions back to Delta Lake.  \n",
     "\n",
+    "It's designed to run within a Databricks environment.\n",
     "\"\"\"\n",
     "\n",
+    "# Import necessary libraries\n",
     "import logging\n",
+    "import typing as t\n",
     "\n",
+    "import functools as ft\n",
+    "import matplotlib.pyplot as plt\n",
     "import mlflow\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import shap\n",
     "from databricks.connect import DatabricksSession\n",
-    "from databricks.sdk.runtime import dbutils\n",
+    "from databricks.sdk.runtime import dbutils  # noqa: F401\n",
+    "from pyspark.sql.types import FloatType, StringType, StructField, StructType\n",
     "\n",
+    "# Import project-specific modules\n",
     "import student_success_tool.dataio as dataio\n",
+    "from student_success_tool.modeling import inference\n",
+    "import student_success_tool.modeling as modeling\n",
+    "from student_success_tool.schemas import pdp as schemas\n",
     "\n",
-    "\n",
-    "# Disable mlflow autologging (prevents conflicts in Databricks environments).\n",
+    "# Disable mlflow autologging (prevents conflicts in Databricks environments)\n",
     "mlflow.autolog(disable=True)\n",
     "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "logging.getLogger(\"py4j\").setLevel(logging.WARNING)  # Suppress py4j logging.\n",
+    "logging.getLogger(\"py4j\").setLevel(logging.WARNING)  # Suppress py4j logging\n",
     "\n",
-    "# Attempt to create a Spark session. Handles non-Databricks environments.\n",
+    "# --- Spark Session Initialization ---\n",
     "try:\n",
     "    spark_session = DatabricksSession.builder.getOrCreate()\n",
     "except Exception:\n",
-    "    logging.warning(\"Unable to create Spark session; are you in a Databricks runtime?\")\n",
+    "    logging.warning(\n",
+    "        \"Unable to create Spark session; are you in a Databricks runtime?\"\n",
+    "    )\n",
     "    spark_session = None\n",
     "\n",
-    "# --- Input Parameters (from Databricks widgets) ---\n",
-    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")  # Databricks workspace identifier.\n",
-    "\n",
-    "\n",
-    "institution_id = dbutils.widgets.get(\"institution_id\")\n",
-    "model_name = dbutils.widgets.get(\"model_name\")\n",
-    "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
-    "model_type = dbutils.widgets.get(\"model_type\")\n",
-    "# TODO: Determine how to track and pass the model URI.\n",
-    "\n",
-    "# --- Delta Lake Configuration ---\n",
+    "# --- Configuration ---\n",
+    "# Input Parameters ( from Databricks widgets)\n",
+    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
     "catalog = DB_workspace\n",
-    "# write_schema = dbutils.jobs.taskValues.get(taskKey=\"data_ingestion\", key=\"write_schema\")  # From data ingestion task.\n",
+    "institution_id = dbutils.widgets.get(\"institution_id\")\n",
+    "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
+    "model_name = dbutils.widgets.get(\"model_name\")\n",
+    "model_type = dbutils.widgets.get(\"model_type\")\n",
+    "\n",
+    "# --- Unity caatalog schemas ---\n",
     "read_schema = f\"{institution_id}_silver\"\n",
     "write_schema = f\"{institution_id}_silver\"\n",
     "model_schema = f\"{institution_id}_gold\"\n",
     "\n",
-    "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"  # Construct model URI.\n",
+    "\n",
+    "# --- Insititution Configuration ---\n",
+    "cfg = dataio.read_config(\n",
+    "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
+    "    schema=schemas.PDPProjectConfig\n",
+    ")\n",
+    "\n",
+    "# --- Model Configuration ---\n",
+    "# model_run_id = \"890b54cf68b147d7a55f515f61d5bfb2\"\n",
+    "# experiment_id = \"1510364684601785\"\n",
+    "experiment_id = cfg.models['graduation'].experiment_id\n",
+    "model_run_id = cfg.models['graduation'].run_id\n",
+    "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"\n",
     "\n",
     "\n",
-    "# --- Model Loading ---\n",
+    "\n",
+    "# --- Load features table ---\n",
+    "features_table = dataio.read_features_table(\"assets/pdp/features_table.toml\")\n",
+    "\n",
+    "# --- Helper Functions ---\n",
     "def mlflow_load_model(model_uri: str, model_type: str):\n",
     "    \"\"\"Loads an MLflow model based on its type.\"\"\"\n",
     "\n",
-    "    load_model_func = {  # Dictionary to map model types to loading functions.\n",
+    "    # Dictionary mapping model types to loading functions\n",
+    "    load_model_func = {\n",
     "        \"sklearn\": mlflow.sklearn.load_model,\n",
     "        \"xgboost\": mlflow.xgboost.load_model,\n",
     "        \"lightgbm\": mlflow.lightgbm.load_model,\n",
-    "        \"pyfunc\": mlflow.pyfunc.load_model,  # Default if type is not recognized\n",
-    "    }.get(\n",
-    "        model_type, mlflow.pyfunc.load_model\n",
-    "    )  # Default to pyfunc if model_type not found.\n",
+    "        \"pyfunc\": mlflow.pyfunc.load_model,  # Default\n",
+    "    }.get(model_type, mlflow.pyfunc.load_model)\n",
     "\n",
     "    model = load_model_func(model_uri)\n",
     "    logging.info(f\"MLflow '{model_type}' model loaded from '{model_uri}'\")\n",
     "    return model\n",
     "\n",
     "\n",
-    "# Load the specified model.\n",
-    "loaded_model = mlflow_load_model(model_uri, model_type)\n",
+    "def predict_proba(\n",
+    "    X,\n",
+    "    model,\n",
+    "    *,\n",
+    "    feature_names: t.Optional[list[str]] = None,\n",
+    "    pos_label: t.Optional[bool | str] = None,\n",
+    ") -> np.ndarray:\n",
+    "    \"\"\"Predicts probabilities using the provided model.\"\"\"\n",
     "\n",
-    "# --- Data Loading, Inference, and Saving ---\n",
+    "    if feature_names is None:\n",
+    "        feature_names = model.named_steps[\"column_selector\"].get_params()[\n",
+    "            \"cols\"\n",
+    "        ]\n",
+    "    if not isinstance(X, pd.DataFrame):\n",
+    "        X = pd.DataFrame(data=X, columns=feature_names)\n",
+    "    else:\n",
+    "        assert X.shape == len(feature_names)\n",
+    "    pred_probs = model.predict_proba(X)\n",
+    "    if pos_label is not None:\n",
+    "        return pred_probs[:, model.classes_.tolist().index(pos_label)]\n",
+    "    else:\n",
+    "        return pred_probs\n",
+    "\n",
+    "\n",
+    "# --- Main Inference Logic ---\n",
     "if spark_session:\n",
-    "    # Load the dataset prepared for inference.\n",
-    "    df_serving_dataset = dataio.from_delta_table(\n",
+    "    # --- Data Loading ---\n",
+    "    df_processed_dataset = dataio.from_delta_table(\n",
     "        f\"{catalog}.{read_schema}.{sst_job_id}_processed_dataset\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
+    "    unique_ids = df_processed_dataset[cfg.student_id_col]\n",
+    "    df_train = modeling.evaluation.extract_training_data_from_model(\n",
+    "        experiment_id\n",
+    "    )\n",
     "\n",
-    "    # Ensure the input data matches the model's expected input schema.\n",
+    "    # --- Model Loading ---\n",
+    "    loaded_model = mlflow_load_model(model_uri, model_type)\n",
+    "\n",
+    "    # --- Inference Parameters ---\n",
+    "    inference_params = {\n",
+    "        \"num_top_features\": 5,\n",
+    "        \"min_prob_pos_label\": 0.5,\n",
+    "    }\n",
+    "\n",
+    "    # --- Feature Selection ---\n",
     "    try:\n",
-    "        model_columns = loaded_model.named_steps[\"column_selector\"].get_params()[\"cols\"]\n",
-    "    except (\n",
-    "        AttributeError\n",
-    "    ):  # if the model doesn't have a column_selector, it is likely a pyfunc model\n",
-    "        model_columns = loaded_model.metadata.get_input_schema().input_names()\n",
-    "    df_serving_dataset = df_serving_dataset[model_columns]\n",
+    "        model_feature_names = loaded_model.named_steps[\n",
+    "            \"column_selector\"\n",
+    "        ].get_params()[\"cols\"]\n",
+    "    except AttributeError:\n",
+    "        model_feature_names = (\n",
+    "            loaded_model.metadata.get_input_schema().input_names()\n",
+    "        )\n",
+    "    df_serving_dataset = df_processed_dataset[model_feature_names]\n",
     "\n",
-    "    # Write the inference-ready dataset back to Delta Lake.\n",
-    "    inference_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
+    "    # --- Write Inference Dataset ---\n",
+    "    inference_dataset_path = (\n",
+    "        f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
+    "    )\n",
     "    dataio.to_delta_table(\n",
     "        df_serving_dataset, inference_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "\n",
-    "    # Reload the inference dataset (important for schema consistency with the model input).\n",
-    "    df_serving_dataset = dataio.from_delta_table(\n",
-    "        inference_dataset_path, spark_session=spark_session\n",
+    "    # --- Prediction ---\n",
+    "    df_predicted_dataset = df_serving_dataset.copy()\n",
+    "    df_predicted_dataset[\"predicted_label\"] = loaded_model.predict(\n",
+    "        df_serving_dataset\n",
     "    )\n",
-    "\n",
-    "    # Perform inference.\n",
-    "    df_serving_dataset[\"predicted_label\"] = loaded_model.predict(df_serving_dataset)\n",
-    "\n",
     "    try:\n",
-    "        df_serving_dataset[\"predicted_prob\"] = loaded_model.predict_proba(\n",
+    "        df_predicted_dataset[\"predicted_prob\"] = loaded_model.predict_proba(\n",
     "            df_serving_dataset\n",
     "        )[:, 1]\n",
-    "    except (\n",
-    "        AttributeError\n",
-    "    ):  # if the model doesn't have predict_proba, it is likely a pyfunc model\n",
-    "        logging.warning(\n",
-    "            \"Model does not have predict_proba method. Skipping probability prediction.\"\n",
+    "    except AttributeError:\n",
+    "        logging.error(\n",
+    "            \"Model does not have predict_proba method. \"\n",
+    "            \"Skipping probability prediction.\"\n",
     "        )\n",
-    "        pass\n",
     "\n",
-    "    # Write the dataset with predictions to Delta Lake.\n",
-    "    predicted_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
+    "    # --- Write Predicted Dataset ---\n",
+    "    predicted_dataset_path = (\n",
+    "        f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
+    "    )\n",
     "    dataio.to_delta_table(\n",
-    "        df_serving_dataset, predicted_dataset_path, spark_session=spark_session\n",
+    "        df_predicted_dataset,\n",
+    "        predicted_dataset_path,\n",
+    "        spark_session=spark_session,\n",
     "    )\n",
     "    logging.info(f\"Predictions saved to: {predicted_dataset_path}\")\n",
     "\n",
-    "    # TODO Shap values\n",
+    "    # --- SHAP Values Calculation ---\n",
+    "    pred_probs = df_predicted_dataset[\"predicted_prob\"]\n",
     "\n",
+    "    # TODO: Consider saving the explainer during training\n",
+    "    # TODO: Pedro's note: Consider getting shap_ref_data_size from a workflow parameter or from the toml config file\n",
+    "    shap_ref_data_size = 200\n",
+    "    train_mode = df_train.mode().iloc\n",
+    "    df_ref = (\n",
+    "        df_train.sample(\n",
+    "            n=min(shap_ref_data_size, df_train.shape[0]),\n",
+    "            random_state=cfg.random_state,\n",
+    "        )\n",
+    "      .fillna(train_mode)\n",
+    "      .loc[:, model_feature_names]\n",
+    "    )\n",
+    "\n",
+    "    explainer = shap.explainers.KernelExplainer(\n",
+    "        ft.partial(\n",
+    "            predict_proba,\n",
+    "            model=loaded_model,\n",
+    "            feature_names=model_feature_names,\n",
+    "            pos_label=cfg.pos_label,\n",
+    "        ),\n",
+    "        df_ref,\n",
+    "        link=\"identity\",\n",
+    "    )\n",
+    "\n",
+    "    shap_schema = StructType(\n",
+    "        [StructField(cfg.student_id_col, StringType(), nullable=False)]\n",
+    "        + [\n",
+    "            StructField(col, FloatType(), nullable=False)\n",
+    "            for col in model_feature_names\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    df_shap_values = (\n",
+    "        spark_session.createDataFrame(\n",
+    "            df_processed_dataset.reindex(\n",
+    "                columns=model_feature_names + [cfg.student_id_col]\n",
+    "            )\n",
+    "        )\n",
+    "      .repartition(spark_session.sparkContext.defaultParallelism)\n",
+    "      .mapInPandas(\n",
+    "            ft.partial(\n",
+    "                inference.calculate_shap_values_spark_udf,\n",
+    "                student_id_col=cfg.student_id_col,\n",
+    "                model_features=model_feature_names,\n",
+    "                explainer=explainer,\n",
+    "                mode=train_mode,\n",
+    "            ),\n",
+    "            schema=shap_schema,\n",
+    "        )\n",
+    "      .toPandas()\n",
+    "      .set_index(cfg.student_id_col)\n",
+    "      .reindex(df_processed_dataset[cfg.student_id_col])\n",
+    "      .reset_index(drop=False)\n",
+    "    )\n",
+    "\n",
+    "    # --- SHAP Summary Plot ---\n",
+    "    shap.summary_plot(\n",
+    "        df_shap_values.loc[:, model_feature_names].to_numpy(),\n",
+    "        df_serving_dataset.loc[:, model_feature_names],\n",
+    "        class_names=loaded_model.classes_,\n",
+    "        max_display=20,\n",
+    "        show=False,\n",
+    "    )\n",
+    "    shap_fig = plt.gcf()\n",
+    "\n",
+    "    # # --- Log SHAP Plot to MLflow ---\n",
+    "    # with mlflow.start_run(run_id=model_run_id) as run:\n",
+    "    #     mlflow.log_figure(\n",
+    "    #         shap_fig,\n",
+    "    #         f\"shap_summary_dataset_name_dataset_\"\n",
+    "    #         f\"{df_ref.shape}_ref_rows.png\",\n",
+    "    #     )\n",
+    "\n",
+    "    # --- Feature Selection for Display ---\n",
+    "    result = inference.select_top_features_for_display(\n",
+    "        df_serving_dataset,\n",
+    "        unique_ids,\n",
+    "        pred_probs,\n",
+    "        df_shap_values[model_feature_names].to_numpy(),\n",
+    "        n_features=inference_params[\"num_top_features\"],\n",
+    "        features_table=features_table,\n",
+    "        needs_support_threshold_prob=inference_params[\n",
+    "            \"min_prob_pos_label\"\n",
+    "        ],\n",
+    "    )\n",
+    "    # Write the inference-ready dataset to Delta Lake.\n",
+    "    shap_results_path = f\"{catalog}.{write_schema}.{sst_job_id}_shap_results_dataset\"\n",
+    "    dataio.to_delta_table(\n",
+    "        result, shap_results_path, spark_session=spark_session\n",
+    "    )\n",
     "else:\n",
-    "    logging.warning(\n",
-    "        \"Spark session not initialized. Skipping data processing and inference.\"\n",
-    "    )"
+    "    logging.error(\"Spark session not initialized.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ca3cb9c8-ca9c-4a63-8847-b608bfe92513",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -170,6 +341,34 @@
     "- mlflow (current: 2.20.0, required: mlflow==2.19.0)\n",
     "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a602528a-c898-4d00-9331-dadcef24ceb1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO save the charts \n",
+    "# # # --- Log SHAP Plot to MLflow ---\n",
+    "# with mlflow.start_run(run_id=model_run_id) as run:\n",
+    "#     mlflow.log_figure(\n",
+    "#         shap_fig,\n",
+    "#         f\"shap_summary_dataset_name_dataset_\"\n",
+    "#         f\"{df_ref.shape}_{sst_job_id}_shap_results.png\",\n",
+    "#     )"
    ]
   }
  ],
