--- a/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
@@ -105,7 +105,9 @@
     "\n",
     "# Read data from CSV files into Pandas DataFrames and validate schema\n",
     "df_course = dataio.pdp.read_raw_course_data(\n",
-    "    file_path=fpath_course, schema=schemas.RawPDPCourseDataSchema, dttm_format=\"%Y-%m-%d\"\n",
+    "    file_path=fpath_course,\n",
+    "    schema=schemas.RawPDPCourseDataSchema,\n",
+    "    dttm_format=\"%Y-%m-%d\",\n",
     ")\n",
     "df_cohort = dataio.pdp.read_raw_cohort_data(\n",
     "    file_path=fpath_cohort, schema=schemas.RawPDPCohortDataSchema\n",
