--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -89,7 +89,7 @@
     "# Reading the parameters from the institution's configuration file\n",
     "cfg = dataio.read_config(\n",
     "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
-    "    schema = schemas.PDPProjectConfig\n",
+    "    schema=schemas.PDPProjectConfig,\n",
     ")\n",
     "\n",
     "# Read preprocessing features\n",
@@ -138,14 +138,14 @@
     "    on=student_id_col,\n",
     "    how=\"inner\",\n",
     ")\n",
-    "df_processed = preprocessing.dataops.clean_up_labeled_dataset_cols_and_vals(df_processed)\n",
+    "df_processed = preprocessing.dataops.clean_up_labeled_dataset_cols_and_vals(\n",
+    "    df_processed\n",
+    ")\n",
     "\n",
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
     "    write_table_path = f\"{catalog}.{write_schema}.{sst_job_id}_processed_dataset\"\n",
-    "    dataio.to_delta_table(\n",
-    "        df_processed, write_table_path, spark_session=spark_session\n",
-    "    )\n",
+    "    dataio.to_delta_table(df_processed, write_table_path, spark_session=spark_session)\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
     "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")\n",
