--- a/pipelines/tasks/sst_pdp_data_validation/data_validation_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_validation/data_validation_pipeline_task.ipynb
@@ -21,8 +21,10 @@
     "# This is the notebook for data validation\n",
     "#\n",
     "# TODO This is a placeholder notebook Still to be implemented\n",
-    "\n",
-    "processed_dataset_table_path = dbutils.jobs.taskValues.get(taskKey=\"data_processing\", key=\"processed_dataset_path\")\n",
+    "from databricks.sdk.runtime import dbutils\n",
+    "processed_dataset_table_path = dbutils.jobs.taskValues.get(\n",
+    "    taskKey=\"data_processing\", key=\"processed_dataset_path\"\n",
+    ")\n",
     "print(processed_dataset_table_path)\n",
     "\n",
     "print(\"Data validation notebook\")"
