--- a/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
@@ -59,9 +59,7 @@
     "try:\n",
     "    spark_session = DatabricksSession.builder.getOrCreate()\n",
     "except Exception:\n",
-    "    logging.warning(\n",
-    "        \"Unable to create Spark session; are you in a Databricks runtime?\"\n",
-    "    )\n",
+    "    logging.warning(\"Unable to create Spark session; are you in a Databricks runtime?\")\n",
     "    spark_session = None\n",
     "\n",
     "# --- Configuration ---\n",
@@ -82,20 +80,20 @@
     "# --- Insititution Configuration ---\n",
     "cfg = dataio.read_config(\n",
     "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
-    "    schema=schemas.PDPProjectConfig\n",
+    "    schema=schemas.PDPProjectConfig,\n",
     ")\n",
     "\n",
     "# --- Model Configuration ---\n",
     "# model_run_id = \"890b54cf68b147d7a55f515f61d5bfb2\"\n",
     "# experiment_id = \"1510364684601785\"\n",
-    "experiment_id = cfg.models['graduation'].experiment_id\n",
-    "model_run_id = cfg.models['graduation'].run_id\n",
+    "experiment_id = cfg.models[\"graduation\"].experiment_id\n",
+    "model_run_id = cfg.models[\"graduation\"].run_id\n",
     "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"\n",
-    "\n",
     "\n",
     "\n",
     "# --- Load features table ---\n",
     "features_table = dataio.read_features_table(\"assets/pdp/features_table.toml\")\n",
+    "\n",
     "\n",
     "# --- Helper Functions ---\n",
     "def mlflow_load_model(model_uri: str, model_type: str):\n",
@@ -124,9 +122,7 @@
     "    \"\"\"Predicts probabilities using the provided model.\"\"\"\n",
     "\n",
     "    if feature_names is None:\n",
-    "        feature_names = model.named_steps[\"column_selector\"].get_params()[\n",
-    "            \"cols\"\n",
-    "        ]\n",
+    "        feature_names = model.named_steps[\"column_selector\"].get_params()[\"cols\"]\n",
     "    if not isinstance(X, pd.DataFrame):\n",
     "        X = pd.DataFrame(data=X, columns=feature_names)\n",
     "    else:\n",
@@ -146,9 +142,7 @@
     "        spark_session=spark_session,\n",
     "    )\n",
     "    unique_ids = df_processed_dataset[cfg.student_id_col]\n",
-    "    df_train = modeling.evaluation.extract_training_data_from_model(\n",
-    "        experiment_id\n",
-    "    )\n",
+    "    df_train = modeling.evaluation.extract_training_data_from_model(experiment_id)\n",
     "\n",
     "    # --- Model Loading ---\n",
     "    loaded_model = mlflow_load_model(model_uri, model_type)\n",
@@ -161,42 +155,33 @@
     "\n",
     "    # --- Feature Selection ---\n",
     "    try:\n",
-    "        model_feature_names = loaded_model.named_steps[\n",
-    "            \"column_selector\"\n",
-    "        ].get_params()[\"cols\"]\n",
+    "        model_feature_names = loaded_model.named_steps[\"column_selector\"].get_params()[\n",
+    "            \"cols\"\n",
+    "        ]\n",
     "    except AttributeError:\n",
-    "        model_feature_names = (\n",
-    "            loaded_model.metadata.get_input_schema().input_names()\n",
-    "        )\n",
+    "        model_feature_names = loaded_model.metadata.get_input_schema().input_names()\n",
     "    df_serving_dataset = df_processed_dataset[model_feature_names]\n",
     "\n",
     "    # --- Write Inference Dataset ---\n",
-    "    inference_dataset_path = (\n",
-    "        f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
-    "    )\n",
+    "    inference_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_inference_dataset\"\n",
     "    dataio.to_delta_table(\n",
     "        df_serving_dataset, inference_dataset_path, spark_session=spark_session\n",
     "    )\n",
     "\n",
     "    # --- Prediction ---\n",
     "    df_predicted_dataset = df_serving_dataset.copy()\n",
-    "    df_predicted_dataset[\"predicted_label\"] = loaded_model.predict(\n",
-    "        df_serving_dataset\n",
-    "    )\n",
+    "    df_predicted_dataset[\"predicted_label\"] = loaded_model.predict(df_serving_dataset)\n",
     "    try:\n",
     "        df_predicted_dataset[\"predicted_prob\"] = loaded_model.predict_proba(\n",
     "            df_serving_dataset\n",
     "        )[:, 1]\n",
     "    except AttributeError:\n",
     "        logging.error(\n",
-    "            \"Model does not have predict_proba method. \"\n",
-    "            \"Skipping probability prediction.\"\n",
+    "            \"Model does not have predict_proba method. Skipping probability prediction.\"\n",
     "        )\n",
     "\n",
     "    # --- Write Predicted Dataset ---\n",
-    "    predicted_dataset_path = (\n",
-    "        f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
-    "    )\n",
+    "    predicted_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
     "    dataio.to_delta_table(\n",
     "        df_predicted_dataset,\n",
     "        predicted_dataset_path,\n",
@@ -216,8 +201,8 @@
     "            n=min(shap_ref_data_size, df_train.shape[0]),\n",
     "            random_state=cfg.random_state,\n",
     "        )\n",
-    "      .fillna(train_mode)\n",
-    "      .loc[:, model_feature_names]\n",
+    "        .fillna(train_mode)\n",
+    "        .loc[:, model_feature_names]\n",
     "    )\n",
     "\n",
     "    explainer = shap.explainers.KernelExplainer(\n",
@@ -233,10 +218,7 @@
     "\n",
     "    shap_schema = StructType(\n",
     "        [StructField(cfg.student_id_col, StringType(), nullable=False)]\n",
-    "        + [\n",
-    "            StructField(col, FloatType(), nullable=False)\n",
-    "            for col in model_feature_names\n",
-    "        ]\n",
+    "        + [StructField(col, FloatType(), nullable=False) for col in model_feature_names]\n",
     "    )\n",
     "\n",
     "    df_shap_values = (\n",
@@ -245,8 +227,8 @@
     "                columns=model_feature_names + [cfg.student_id_col]\n",
     "            )\n",
     "        )\n",
-    "      .repartition(spark_session.sparkContext.defaultParallelism)\n",
-    "      .mapInPandas(\n",
+    "        .repartition(spark_session.sparkContext.defaultParallelism)\n",
+    "        .mapInPandas(\n",
     "            ft.partial(\n",
     "                inference.calculate_shap_values_spark_udf,\n",
     "                student_id_col=cfg.student_id_col,\n",
@@ -256,10 +238,10 @@
     "            ),\n",
     "            schema=shap_schema,\n",
     "        )\n",
-    "      .toPandas()\n",
-    "      .set_index(cfg.student_id_col)\n",
-    "      .reindex(df_processed_dataset[cfg.student_id_col])\n",
-    "      .reset_index(drop=False)\n",
+    "        .toPandas()\n",
+    "        .set_index(cfg.student_id_col)\n",
+    "        .reindex(df_processed_dataset[cfg.student_id_col])\n",
+    "        .reset_index(drop=False)\n",
     "    )\n",
     "\n",
     "    # --- SHAP Summary Plot ---\n",
@@ -288,15 +270,11 @@
     "        df_shap_values[model_feature_names].to_numpy(),\n",
     "        n_features=inference_params[\"num_top_features\"],\n",
     "        features_table=features_table,\n",
-    "        needs_support_threshold_prob=inference_params[\n",
-    "            \"min_prob_pos_label\"\n",
-    "        ],\n",
+    "        needs_support_threshold_prob=inference_params[\"min_prob_pos_label\"],\n",
     "    )\n",
     "    # Write the inference-ready dataset to Delta Lake.\n",
     "    shap_results_path = f\"{catalog}.{write_schema}.{sst_job_id}_shap_results_dataset\"\n",
-    "    dataio.to_delta_table(\n",
-    "        result, shap_results_path, spark_session=spark_session\n",
-    "    )\n",
+    "    dataio.to_delta_table(result, shap_results_path, spark_session=spark_session)\n",
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
    ]
@@ -361,7 +339,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO save the charts \n",
+    "# TODO save the charts\n",
     "# # # --- Log SHAP Plot to MLflow ---\n",
     "# with mlflow.start_run(run_id=model_run_id) as run:\n",
     "#     mlflow.log_figure(\n",
